--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/ssh,zsh,vagrant,jetbrains+all,visualstudiocode,macos
-# Edit at https://www.toptal.com/developers/gitignore?templates=ssh,zsh,vagrant,jetbrains+all,visualstudiocode,macos
+# Created by https://www.toptal.com/developers/gitignore/api/zsh,ssh,macos,vagrant,jetbrains+all,visualstudiocode,venv
+# Edit at https://www.toptal.com/developers/gitignore?templates=zsh,ssh,macos,vagrant,jetbrains+all,visualstudiocode,venv
 
 ### JetBrains+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -134,10 +134,26 @@ Temporary Items
 ### Vagrant Patch ###
 *.box
 
+### venv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
+
 ### VisualStudioCode ###
 .vscode/*
+!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
+!.vscode/extensions.json
 *.code-workspace
 
 ### VisualStudioCode Patch ###
@@ -169,18 +185,19 @@ zsdoc/data
 
 # MichaelAquilina/zsh-autoswitch-virtualenv plugin's files
 # (for Zsh plugins using Python)
-.venv
 
 # Zunit tests' output
 /tests/_output/*
 !/tests/_output/.gitkeep
 
-# End of https://www.toptal.com/developers/gitignore/api/ssh,zsh,vagrant,jetbrains+all,visualstudiocode,macos
+# End of https://www.toptal.com/developers/gitignore/api/zsh,ssh,macos,vagrant,jetbrains+all,visualstudiocode,venv
 
 **/*.lock.json
 *.lock.json
-vendor/*
 
 tmp/**
 **.log
 extras
+
+
+ignored
